[metadata]
name = flake8_keyword_function_parameters
version = 0.1.0
description = Flake8 plugin to lint for keyword-only function parameters
url = https://github.com/asib/flake8_keyword_function_parameters
author = Jacob Fenton
author_email = jacob+flake8_keyword_function_parameters@dfenton.xyz
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
py_modules = flake8_keyword_function_parameters
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
flake8.extension =
    KFP=flake8_keyword_function_parameters:Plugin
